# GenesisDroneEnv

./: .gitignore  README.md  pyproject.toml
config/controller_track/: minco_params.yaml
config/pos_ctrl_eval/: flight.yaml
config/rc_FPV_eval/: flight.yaml  genesis_env.yaml
config/track_rl/: flight.yaml  genesis_env.yaml  minco_params.yaml  rl_env.yaml
genesis_drones/env/: genesis_env.py
genesis_drones/flight/: SE3_control.py  SE3_controller.py  SO3_control.py  compute_altitude.py  flatness.py  mavlink_sim.py  minco_params.py  odom.py  pid.py  quadrotor_control.py  ros_interface.py  trajectory.py
genesis_drones/tasks/: track_task.py
logs/track_rl/policy_demo/: model_500.pt
scripts/eval/: SE3_controller_eval.py  SO3_controller_eval.py  controller_eval.py  pos_ctrl_eval.py  rc_FPV_eval.py  track_eval.py
scripts/shell/: launch_tb.bash
scripts/train/: track_train.py
